update documentation and add unit tests
